<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.3">
  <GVL Name="vars" Id="{27ebf902-24c5-49b6-b79c-af3f034042bf}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	udp_x	: LREAL := 2000;
	udp_y	: LREAL := 1400;
	udp_theta : LREAL := 1.4;
	
	fromMatlab_velocityX AT%I* : LREAL;
	fromMatlab_velocityY AT%I*: LREAL;
	fromMatlab_theta AT%I*: LREAL;
	
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>