<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.3">
  <POU Name="MAIN" Id="{7ab232d5-bf67-4c8a-bfe1-11ef0fe8c457}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM MAIN
VAR
	velocityX AT%Q* : LREAL;
	velocityY AT%Q* : LREAL;
	theta AT%Q* : LREAL;
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[velocityX := vars.fromMatlab_velocityX;
velocityY := vars.fromMatlab_velocityY;
theta := vars.fromMatlab_theta;]]></ST>
    </Implementation>
    <LineIds Name="MAIN">
      <LineId Id="2" Count="0" />
      <LineId Id="18" Count="1" />
    </LineIds>
  </POU>
</TcPlcObject>